# chatvcode

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/atlas-core/: Cargo.toml
crates/atlas-core/examples/: index_dir.rs
crates/atlas-core/src/: chat.rs  error.rs  ignore.rs  lib.rs  model.rs  scanner.rs
crates/atlas-core/tests/: chat.rs  embedding.rs  index.rs
crates/atlas-core/tests/common/: mod.rs
crates/atlas-core/tests/fixtures/: sample.jsx  sample.php  sample.py
crates/atlas-llm/: Cargo.toml  build.rs  download_test_model.sh
crates/atlas-llm/src/: context.rs  error.rs  ffi.rs  gguf.rs  lib.rs  service.rs  types.rs
crates/atlas-llm/tests/: README.md  embedding.rs  inference_acceptance.rs  real_inference.rs  streaming_inference.rs
crates/atlas-parser/: Cargo.toml
crates/atlas-parser/examples/: embedding_core.rs  index_core.rs  parse_file.rs
crates/atlas-parser/src/: chunk.rs  lib.rs  parse.rs  parser.rs  tests.rs
crates/atlas-parser/src/chunk/: chunk_js_ts.rs  chunk_php.rs  chunk_python.rs  chunk_rust.rs  mod.rs
crates/atlas-parser/tests/: fixture_integration.rs
crates/atlas-vdb/: Cargo.toml
crates/atlas-vdb/benches/: vector_store.rs
crates/atlas-vdb/src/: cache.rs  config.rs  download.rs  embedding.rs  error.rs  hnsw.rs  lib.rs  model.rs  onnx.rs  quantization.rs  registry.rs  similarity.rs  store.rs
crates/chatvcode-agent/: Cargo.toml
crates/chatvcode-agent/src/: budget.rs  cache.rs  context.rs  error.rs  executor.rs  lib.rs  loop_detector.rs  prompt.rs  service.rs  state.rs  types.rs
crates/chatvcode-agent/src/snapshots/: chatvcode_agent__prompt__tests__snapshot_concluding_prompt.snap  chatvcode_agent__prompt__tests__snapshot_error_recovery_prompt.snap  chatvcode_agent__prompt__tests__snapshot_loop_detected_prompt.snap  chatvcode_agent__prompt__tests__snapshot_observing_prompt.snap  chatvcode_agent__prompt__tests__snapshot_planning_prompt.snap  chatvcode_agent__prompt__tests__snapshot_system_prompt.snap
crates/chatvcode-agent/src/tools/: file_structure.rs  grep_code.rs  list_files.rs  mod.rs  read_file.rs  search_code.rs  search_symbol.rs
crates/chatvcode-cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/chatvcode-cli/examples/: basic_chat.rs  basic_index.rs
crates/chatvcode-cli/src/: lib.rs  main.rs
crates/chatvcode-cli/tests/: integration.rs
crates/chatvcode-core/: Cargo.toml
crates/chatvcode-core/examples/: index_dir.rs
crates/chatvcode-core/src/: chat.rs  error.rs  incremental.rs  lib.rs  model.rs  scanner.rs
crates/chatvcode-core/tests/: chat.rs  chat_with_context.rs  embedding.rs  index.rs
crates/chatvcode-core/tests/common/: mod.rs
crates/chatvcode-llm/: Cargo.toml  README.md  build.rs  download_test_model.sh
crates/chatvcode-llm/benches/: inference_perf.rs
crates/chatvcode-llm/src/: backend.rs  context.rs  db.rs  download.rs  error.rs  ffi.rs  formats.rs  gguf.rs  lib.rs  log.rs  model.rs  quant.rs  sampler.rs  service.rs  tools.rs  types.rs
crates/chatvcode-llm/src/chat/: message.rs  mod.rs  prompt.rs  session.rs  template.rs
crates/chatvcode-llm/src/snapshots/: chatvcode_llm__types__tests__snapshot_chat_template_auto_fallback.snap  chatvcode_llm__types__tests__snapshot_chat_template_chatml.snap  chatvcode_llm__types__tests__snapshot_chat_template_command_r.snap  chatvcode_llm__types__tests__snapshot_chat_template_deepseek.snap  chatvcode_llm__types__tests__snapshot_chat_template_gemma.snap  chatvcode_llm__types__tests__snapshot_chat_template_llama3.snap  chatvcode_llm__types__tests__snapshot_chat_template_phi.snap  chatvcode_llm__types__tests__snapshot_chat_template_raw.snap
crates/chatvcode-llm/tests/: README.md  embedding.rs  inference_acceptance.rs  real_inference.rs  stability.rs  streaming_inference.rs  types_and_stopping.rs
crates/chatvcode-parser/: Cargo.toml
crates/chatvcode-parser/examples/: embedding_core.rs  index_core.rs  parse_file.rs
crates/chatvcode-parser/src/: parse.rs  parser.rs  tests.rs
crates/chatvcode-parser/src/chunk/: chunk_js_ts.rs  chunk_php.rs  chunk_python.rs  chunk_rust.rs  mod.rs
crates/chatvcode-parser/tests/: fixture_integration.rs
crates/chatvcode-vdb/: Cargo.toml
crates/chatvcode-vdb/benches/: vector_store.rs
crates/chatvcode-vdb/src/: config.rs  download.rs  embedding.rs  error.rs  hnsw.rs  model.rs  onnx.rs  quantization.rs  similarity.rs  store.rs
