[package]
name = "atlas-core"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"

[dependencies]
atlas-vdb = { path = "../atlas-vdb" }
atlas-llm = { path = "../atlas-llm" }
clap = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
