[package]
name = "atlas-parser"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
atlas-vdb = { path = "../atlas-vdb" }
tempfile = "3"

[dependencies]
atlas-core = { path = "../atlas-core" }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-php = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
