[package]
name = "chatvcode-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chatvcode"
path = "src/main.rs"

[dependencies]
chatvcode-core = { path = "../chatvcode-core" }
chatvcode-llm = { path = "../chatvcode-llm" }
chatvcode-parser = { path = "../chatvcode-parser" }
chatvcode-vdb = { path = "../chatvcode-vdb" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[example]]
name = "basic_index"
path = "examples/basic_index.rs"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[lints]
workspace = true
