[package]
name = "chatvcode-llm"
version = "0.1.0"
edition = "2024"
description = "LLM inference engine using llama.cpp FFI bindings"

[features]
default = []
# Enable CUDA acceleration (requires CUDA toolkit)
cuda = []
# Enable Vulkan acceleration
vulkan = []
# Enable Metal acceleration (macOS only)
metal = []

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitflags = "2"
dirs = "6"
num_cpus = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = "2"

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
tempfile = "3"
insta = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference_perf"
harness = false

[lints]
workspace = true
