[package]
name = "chatvcode-vdb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ort = "2.0.0-rc.12"
tokenizers = "0.21"
log = { workspace = true }
rayon = { workspace = true }
lru = "0.15"
hf-hub = "0.4"
rand = "0.9"
dirs = "6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lints]
workspace = true
